# agentmem-bench

./: README.md  pyproject.toml
agentmem_bench/: __init__.py  __main__.py  adapter.py  compare.py  fixtures.py  runner.py  types.py
agentmem_bench/scenarios/: __init__.py  base.py  s1_contradictory.py  s2_temporal.py  s3_scope.py  s4_crdt.py  s5_isolation.py  s6_policy.py  s7_operational.py
agentmem_bench/suts/: __init__.py  fake.py  pgvector.py  supermemory.py
fixtures/: s7_writes.jsonl
notes/: pgvector-adapter.md  supermemory-adapter.md  zep-adapter.md
results/: COMPARISON.md
tests/: test_smoke.py
