[project]
name = "agentmem-bench"
version = "0.1.0"
description = "A reproducible benchmark for multi-agent memory systems (S1–S7)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
# The harness core + the FakeSUT reference adapter are stdlib-only, so the
# skeleton runs with zero third-party deps. Real SUT adapters (Mem0, AgentMem,
# pgvector, …) add their own optional deps under [project.optional-dependencies].
dependencies = []

[project.optional-dependencies]
# Installed per-SUT so a minimal run needs nothing. e.g. `uv sync --extra mem0`.
mem0 = ["mem0ai>=0.1"]
pgvector = ["psycopg[binary]>=3.1", "openai>=1.0"]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
agentmem-bench = "agentmem_bench.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentmem_bench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
